[package]
name = "tsz-lowering"
description = "AST-to-type lowering bridge for tsz"
version.workspace = true
edition.workspace = true
autotests = false
repository.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tsz-common = { workspace = true }
tsz-scanner = { workspace = true }
tsz-parser = { workspace = true }
tsz-solver = { workspace = true }
tsz-binder = { workspace = true }
indexmap = { workspace = true }
rustc-hash = { workspace = true }

[lints]
workspace = true
