[package]
name = "tsz-parser"
description = "TypeScript parser and AST types for the tsz compiler"
version.workspace = true
edition.workspace = true
autotests = false
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tsz-common = { workspace = true }
tsz-scanner = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }

[lints]
workspace = true
