[package]
name = "tsz-scanner"
description = "TypeScript scanner/tokenizer for the tsz compiler"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tsz-common = { workspace = true }
memchr = { workspace = true }
serde = { workspace = true }
wasm-bindgen = { workspace = true }

[lints]
workspace = true
