[package]
name = "tsz-wasm"
description = "WebAssembly bindings for the tsz TypeScript compiler"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
tsz = { path = "../..", package = "wasm" }
tsz-common = { workspace = true }
tsz-scanner = { workspace = true }
tsz-parser = { workspace = true }
tsz-binder = { workspace = true }
tsz-solver = { workspace = true }
tsz-checker = { workspace = true }
tsz-emitter = { workspace = true }
tsz-lsp = { workspace = true }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
rustc-hash = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lints]
workspace = true
